src/test/resources/ok/fn_params.mc
int sum2(int a, int b) {
  return a + b;
}

int echoIntCharBoolString(int x, char c, bool b, string s) {
  return x;
}

int main() {
  int v = sum2(3, 4);
  return v;
}
