src/test/resources/errors/types.mc
int sum2(int a, int b) { return a + b; }
int main() {
  string s;
  s = 5;
  return "hola";
}